fix a css overlap

--- a/PaperWorld/src/components/footer.css
+++ b/PaperWorld/src/components/footer.css
@@ -2,6 +2,6 @@
     margin-top: 15px;
     background-color: #223B82 !important;
   }
-  a{
+  .footer a{
     color: white !important;
   }
